<resources>
    <string name="app_name">UzTaxi</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiamV5YmkyNCIsImEiOiJja2lyYmx1bHcwMzg2MnNwZGFxa3I2cWk4In0.VhJb6YeTGBbI4hwITbZl4A</string>

    <string name="title_activity_info">info</string>

    <string name="terms_of_service">Авторизуясь, я принимаю условия\n<a href="https://uz.taxi/user-agreement-for-client/">Пользовательское Соглашение </a> и обработка моих личных данных с точки зрения <a href="https://uz.taxi/app-client-privacy-policy/">Политика конфиденциальности</a></string>
    <string name="order_created">Заказ создан!</string>
    <string name="order_status_changed">Статус заказа изменен!</string>
    <string name="order_driver_coming">Водитель уже идет к вам!</string>
    <string name="driver_may_delay">Водитель может немного задержаться!</string>
    <string name="driver_is_waiting">Водитель ждет вас!</string>
    <string name="ride_started">Маршрут запущен!</string>
    <string name="driver_unassigned">Мы не назначили водителя!</string>
    <string name="bonus_added">Бонусы добавлены на ваш счет!</string>
    <string name="bonus_withdrawn">Сняли бонусы со своего аккаунта!</string>
    <string name="paid_waiting_started">Время ожидания начало оплачиваться!</string>
    <string name="request_chat">Запрос в чат</string>
    <string name="from">от</string>
    <string name="currency">сум</string>
    <string name="estimating">Оценивает…</string>
    <string name="finished">Завершено</string>
    <string name="cancelled">Отменено</string>
    <string name="km">км</string>
    <string name="verification_code_wrong">Код подтверждения неверен</string>
    <string name="sms_sent_successfully">Код подтверждения отправлено успешно</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="intro_2_title">Примите лучшие варианты</string>
    <string name="intro_2_content">Широкий выбор тарифов и водителей позволит вам подобрать оптимальную поездку для вашего пункта назначения.</string>
    <string name="intro_3_title">Лучшие водители в вашем регионе</string>
    <string name="intro_3_content">Мы нанимаем каждого водителя, проходя специальное собеседование, и выбираем его для вашей поездки на основе их поведения.</string>
    <string name="intro_4_title">Любой метод оплаты</string>
    <string name="intro_4_content">Вы можете добавить свою карту UzCard или HumoCard, чтобы оплатить поездку и получать кэшбэк в реальном времени с каждой успешной поездки.</string>
    <string name="couldnot_find_anything">Мы не смогли найти ничего по вашему запросу :(</string>
    <string name="cash">Оплатить наличными</string>
    <string name="pay_cash">Оплатить наличными</string>
    <string name="minimum_bonus_to_use">Минимальная сумма бонуса для использования: 1000 сум.</string>
    <string name="not_enough_bonus">У вас недостаточно денег на балансе</string>
    <string name="clarifying_address">уточняем адрес…</string>
    <string name="cannot_call_driver_now">Вызвать водителя сейчас невозможно</string>
    <string name="driver_is_waiting_for_you">Водитель ждет вас</string>
    <string name="to_cancel_order">Отмена заказа</string>
    <string name="looking_for_drivers">Ищем водителей вокруг…</string>
    <string name="around_city">По городу…</string>
    <string name="next">Next</string>
    <string name="ready">Готово</string>
    <string name="km_0">0.0 км</string>
    <string name="sum_0">0 сум</string>
    <string name="current_lang">Русский</string>
    <string name="minute">min</string>
    <string name="order_history">История заказов</string>
    <string name="settings">Настройки</string>
    <string name="app_language">Язык приложения</string>
    <string name="show_driver_where_am_i">Показать водителю, где я</string>
    <string name="shows_driver_ur_location">Показывает водителю ваше местоположение</string>
    <string name="receice_notifications">Получать уведомления</string>
    <string name="receiving_notifications">Получение уведомлений о статусе заказа</string>
    <string name="regular_comments">Регулярный комментарий</string>
    <string name="reg_comment_will_be_sent">Он будет отправлен каждому водителю.</string>
    <string name="animation_weather">Анимация погоды</string>
    <string name="terrain">Дождь, снег и туман …</string>
    <string name="map_3d">3D Карта</string>
    <string name="map_will_be_3d">Здания и ландшафты будут в 3D.</string>
    <string name="edit">Изменить</string>
    <string name="share">Поделиться</string>
    <string name="driver_comes_within">Водитель приедет в течение</string>
    <string name="call_driver">Позвонить водителю</string>
    <string name="cancelling_order">Отменить заказ</string>
    <string name="ride_finished">Поездка завершена</string>
    <string name="payment_for_ride">Плата за поездку :</string>
    <string name="paid_bonus">Выплаченный бонус :</string>
    <string name="rate_driver">Оцените водителя</string>
    <string name="write_your_feedback">Напишите свой отзыв здесь…</string>
    <string name="confirm">Подтвердить</string>
    <string name="from_where">Откуда поедете?</string>
    <string name="to_where">Куда мы едем??</string>
    <string name="delivery">Доставка</string>
    <string name="add_address">Добавить адрес</string>
    <string name="address_history_not_found">История адресов не найдена</string>
    <string name="order">Заказать</string>
    <string name="searching_address">Поиск адреса</string>
    <string name="address_not_found">Адрес не найден</string>
    <string name="comments_for_driver">Комментарии для водителя…</string>
    <string name="save">Сохранить</string>
    <string name="do_u_wanna_cancel">Вы действительно хотите отменить свой заказ?</string>
    <string name="no">Нет</string>
    <string name="yes">ДА</string>
    <string name="driver_is_here">Водитель прибыл по указанному адресу. Вы можете сообщить ему, что выходите на улицу</string>
    <string name="on_the_way">Я в пути</string>
    <string name="gps_not_working">GPS не работает</string>
    <string name="turn_on_gps">Включите GPS, чтобы сообщить нам, где вы находитесь.</string>
    <string name="go_to_settings">Перейти в настройки</string>
    <string name="log_out">Выход из системы</string>
    <string name="do_u_wanna_logout">Вы действительно хотите выйти? Если вы выйдете из системы, все ваши данные, включая историю адресов, будут удалены.</string>
    <string name="bonuses">Бонусы</string>
    <string name="your_bonuses">Ваши бонусы</string>
    <string name="you_can_pay_bonus">Вы можете оплатить поездку своими бонусами. И вы можете получить больше кэшбэка, когда поездка закончится.</string>
    <string name="pay_part_of_ride">Оплатите часть поездки бонусами</string>
    <string name="enter_amount">Пожалуйста, введите сумму:</string>
    <string name="order_without_bonus">Заказать без бонусов</string>
    <string name="order_with_bonus">Заказать с бонусами</string>
    <string name="welcome">Добро\nпожаловать</string>
    <string name="authenticate">Авторизоваться</string>
    <string name="sms_confirmation">SMS подтверждение</string>
    <string name="we_sent_code">Мы отправили вам код для подтверждения \n вашего номера телефона</string>
    <string name="didnt_get_code">Не получили код?</string>
    <string name="send_again">ОТПРАВИТЬ СНОВА</string>
    <string name="intro_1_title">Запросите поездку в любое время в любом месте</string>
    <string name="intro_1_content">Запросите поездку, и вас встретит ближайший водитель за минимальное время.</string>
    <string name="ride_history">История поездок</string>
    <string name="my_addreses">Мои адреса</string>
    <string name="support_centre">Служба поддержки</string>
    <string name="information">Информация</string>
    <string name="sign_out">Выйти</string>
    <string name="version_number">v.1.0.0</string>

    <string name="main_acitivty_title">main</string>
    <string name="about_app">О приложении</string>
    <string name="user_agreement">Лицензионное соглашение</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="version">Версия 1.0.0</string>
    <string name="uzbek">Узбекский</string>
    <string name="karakalpak">Каракалпак</string>
    <string name="russian">Русский</string>
    <string name="english">Английский</string>

    <string name="house">-дом</string>
    <string name="creating_route">Составление маршрута...</string>
    <string name="first_name">Ваше имя</string>
    <string name="start_point">Место отрправления</string>
    <string name="end_point">Место назначения</string>
    <string name="map">Карта</string>
    <string name="payment_type">To\'lov turi</string>
    <string name="high_demand">Высокий спрос</string>

</resources>