<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity"
    android:background="@color/white"
    >


    <RelativeLayout
        android:id="@+id/rvBack"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/bc_btn_menu"
        android:clickable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="13dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_arrow_bottom"
            android:rotation="90"
            android:padding="2dp"
            />

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/rvBack"
        app:layout_constraintBottom_toBottomOf="@id/rvBack"
        app:layout_constraintLeft_toRightOf="@id/rvBack"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_marginRight="70dp"
        android:text="@string/settings"
        android:fontFamily="@font/g_bold"
        android:textColor="@color/purple_200"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/rvBack"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:paddingTop="12dp"
        >

        <RelativeLayout
            android:id="@+id/rvLanguage"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="?attr/selectableItemBackground"
            >

            <Space
                android:id="@+id/spaceView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                />

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_arrow_bottom"
                android:layout_alignParentEnd="true"
                android:rotation="270"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />


            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/spaceView"
                android:text="@string/app_language"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/g_semi_bold"
                android:layout_marginStart="18dp"
                android:textSize="18sp"
                />

            <TextView
                android:layout_below="@id/spaceView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_lang"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/g_regular"
                android:layout_marginStart="18dp"
                android:textSize="15sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#DCDCDC"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rvSendLocationDriver"
            android:layout_width="match_parent"
            android:layout_height="72dp"

            android:background="?attr/selectableItemBackground"
            >

            <Space
                android:id="@+id/spaceView2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_toStartOf="@id/switchSendLocation"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginEnd="8dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/spaceView2"
                android:text="@string/show_driver_where_am_i"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/g_semi_bold"
                android:layout_marginStart="18dp"
                android:textSize="18sp"
                />

            <TextView
                android:layout_below="@id/spaceView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/switchSendLocation"
                android:layout_marginEnd="12dp"
                android:text="@string/shows_driver_ur_location"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/g_regular"
                android:layout_marginStart="18dp"
                android:textSize="15sp"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:focusable="false"
                android:clickable="false"
                android:id="@+id/switchSendLocation"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:thumb="@drawable/thumb_selector"
                app:track="@drawable/track_selector"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#DCDCDC"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rvNotifications"
            android:layout_width="match_parent"
            android:layout_height="72dp"

            android:background="?attr/selectableItemBackground"
            >

            <Space
                android:id="@+id/spaceView3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/spaceView3"
                android:text="@string/receice_notifications"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/g_semi_bold"
                android:layout_marginStart="18dp"
                android:textSize="18sp"
                />

            <TextView
                android:layout_below="@id/spaceView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiving_notifications"
                android:layout_toLeftOf="@id/switchNotification"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/g_regular"
                android:layout_marginStart="18dp"
                android:textSize="15sp"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchNotification"
                android:checked="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:focusable="false"
                android:clickable="false"
                android:layout_marginEnd="16dp"
                android:thumb="@drawable/thumb_selector"
                app:track="@drawable/track_selector"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#DCDCDC"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rvDefaultComment"
            android:layout_width="match_parent"
            android:layout_height="72dp"

            android:background="?attr/selectableItemBackground"
            >

            <Space
                android:id="@+id/spaceView4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/spaceView4"
                android:text="@string/regular_comments"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/g_semi_bold"
                android:layout_marginStart="18dp"
                android:textSize="18sp"
                />

            <TextView
                android:layout_below="@id/spaceView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_comment_will_be_sent"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/g_regular"
                android:layout_marginStart="18dp"
                android:textSize="15sp"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchComment"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="false"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:thumb="@drawable/thumb_selector"
                app:track="@drawable/track_selector"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#DCDCDC"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rvWeatherAnimation"
            android:layout_width="match_parent"
            android:layout_height="72dp"

            android:background="?attr/selectableItemBackground"
            >

            <Space
                android:id="@+id/spaceView5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/spaceView5"
                android:text="@string/animation_weather"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/g_semi_bold"
                android:layout_marginStart="18dp"
                android:textSize="18sp"
                />

            <TextView
                android:layout_below="@id/spaceView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terrain"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/g_regular"
                android:layout_marginStart="18dp"
                android:textSize="15sp"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchWeatherAnimation"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:focusable="false"
                android:clickable="false"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:thumb="@drawable/thumb_selector"
                app:track="@drawable/track_selector"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#DCDCDC"
                />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rvMap3d"
            android:layout_width="match_parent"
            android:layout_height="72dp"

            android:background="?attr/selectableItemBackground"
            >

            <Space
                android:id="@+id/spaceView6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/spaceView6"
                android:text="@string/map_3d"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/g_semi_bold"
                android:layout_marginStart="18dp"
                android:textSize="18sp"
                />

            <TextView
                android:layout_below="@id/spaceView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_will_be_3d"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/g_regular"
                android:layout_marginStart="18dp"
                android:textSize="15sp"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchMap3d"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:focusable="false"
                android:clickable="false"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:thumb="@drawable/thumb_selector"
                app:track="@drawable/track_selector"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#DCDCDC"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rvDemoCar"
            android:layout_width="match_parent"
            android:layout_height="72dp"

            android:background="?attr/selectableItemBackground"
            >

            <Space
                android:id="@+id/spaceView7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/spaceView7"
                android:text="Demo Car"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/g_semi_bold"
                android:layout_marginStart="18dp"
                android:textSize="18sp"
                />

            <TextView
                android:layout_below="@id/spaceView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Adds a car and moves it upon clicks"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/purple_200"
                android:fontFamily="@font/g_regular"
                android:layout_marginStart="18dp"
                android:textSize="15sp"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchDemoCar"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:focusable="false"
                android:clickable="false"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:thumb="@drawable/thumb_selector"
                app:track="@drawable/track_selector"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="#DCDCDC"
                />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:textSize="14sp"
        android:text="© 2019-2021   « UzTaxi™ »"
        android:fontFamily="@font/g_light"
        android:textColor="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>